# deep-split-be

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deepsplit-restored.sqlite  deepsplit.service  deepsplit.sqlite  deepsplit.sqlite-shm  deepsplit.sqlite-wal  deploy_dev.sh
.github/workflows/: builder.yaml  deploy_dev.yml  deploy_prod.yml  docker.yml  nightly.yaml  release.yaml
migrations/: 20230430133834_create_tables.sql  20231230040327_make_group_name_optional.sql  20231230163707_make-user-name-nullable.sql  20240101173323_create_indexes.sql  20240110053324_add_known_currencies.sql  20240207062216_add_expense_category.sql  20240212063410_add_note_image.sql  20240216073423_add_split_part_index.sql  20240218170631_add_expense_created_at_index.sql  20240223071518_add_updated_at_to_expense_split.sql  20240223191950_add_transaction_date.sql  20240224164300_add_transaction_date_split.sql  20240226070137_add_payment_mode_constraints.sql  20240226075553_transaction_metadata.sql
src/: main.rs
src/auth/: mod.rs
src/email/: mod.rs
src/expire_map/: mod.rs
src/models/: amount.rs  currency.rs  expense.rs  group.rs  mod.rs  split.rs  user.rs
src/notification/: mod.rs
src/s3/: mod.rs
src/schema/: mod.rs  mutation.rs  query.rs
