[package]
name = "deepsplit_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", 'runtime-tokio-rustls'] }
tokio = { version = "1", features = ["full"] }

anyhow = "1"
dotenvy = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
axum = { version = "0.6.0", features = ["ws", "headers"] }
pretty_env_logger = "0.4.0"
jsonwebtoken = "8"
async-graphql = { version = "5.0.7", features = ["uuid", "apollo_tracing"] }
async-graphql-axum = "5.0.5"
tower-http = { version = "0.4.0", features = ["cors"] }
axum-auth = "0.4"
log = "0.4.17"
reqwest = { version = "0.11.17", features = [
    "rustls-tls",
], default-features = false }
http-cache = "0.11.0"
http-cache-reqwest = "0.9.0"
once_cell = "1.17.1"
reqwest-middleware = "0.2.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = "0.4.24"
rand = "0.8.5"
futures = "0.3.30"
strum = { version = "0.25.0", features = ["derive"] }
ip2country = "0.3.0"
iso_currency = { version = "0.4.4", features = ["iterator"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
